--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-  
-<p><p>Hello World. My name is Kellan Daniel Kennedy Campbell </p>
+	<head>
+		<title>Kellan's Interests and Pursuits</title>
+		<link rel="stylesheet" text="text/css" href="stylesheet.css">
+	</head>
+	
+	<body>
+		<header>
+			<h1>Kellan Campbell's Interests and Pursuits</h1>
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="research.html">Research</a></li>
+					<li><a href="cooking.html">Cooking</a></li>
+					<li><a href="future-endeavors.html">Future Endeavours</a></li>
+			</nav>
+		</header>
+		<section>
+			<main>
 
-</body>
+			<p> Kellan Campbell is a student at the University of Wisconsin-Madison. Curretnly, he is a student researcher in <a href="https://neurology.wisc.edu/research-and-labs/gallagher-lab/"> the Gallagher Lab </a>. He is pursing degrees in Economics and Neurobiology. Previously, he has worked as an EMT for the Wauanakee EMS, a CNA for Good Samaritan Society, and an Operations Improvement intern for Exact Sciences. </p>
+			</main>
+
+			<article >
+			<p style="color:purple;"> In his most recent experience, Kellan served as an Intern at Exact Sciences, a molecular diagnostics company based in Madison, Wisconsin. There he assisted in the development2 of new process capabilities, performed project management, analytics, and measure to ensure milestones are met and deliverables achieved. </body></p>
+			</article>
+
+			<article class="mart">
+			<img src="images\portrait.jpeg" alt="Kellan's Photo" width ="210" height="220" >
+			</article>
+
+			<article>
+			<p style="color:purple;"> Originating from Scotland, he is a first generation American; ableit he is also a fourth-generation badger on his mother's side. His main interests are snowboarding, reading and cycling.</body></p>
+			</article>
+
+
+		</section>
+
+		<footer>
+			<p> &copy; Copyright 2022 </p>
+
+		</footer>
+
+
+
+	</body>
 </html>
+
+
+
+
+
+
+
+
+
