--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</article>
 
 			<article class="mart">
-			<img src="images\portrait.jpeg" alt="Kellan's Photo" width ="210" height="220" >
+			<img src="https://kdcampbell2.github.io/lis351-kellan.github.io/portrait.jpeg" alt="Kellan's Photo" width ="210" height="220" >
 			</article>
 
 			<article>
