--- a/cooking.html
+++ b/cooking.html
@@ -23,7 +23,7 @@
 			<main>
 
 
-				<img src="images\fieldnotes.webp" alt="Field Notes for Food Adventure" width ="600" height="800"> <p> Photo: Pat O'Malley</p>
+				<img src="https://kdcampbell2.github.io/lis351-kellan.github.io/fieldnotes.webp" alt="Field Notes for Food Adventure" width ="600" height="800"> <p> Photo: Pat O'Malley</p>
 
 			<p> 
 				
