--- a/future-endeavors.html
+++ b/future-endeavors.html
@@ -23,7 +23,7 @@
 			<main>
 
 
-				<img src="images\driftlessarea.jpeg" alt="Driftless Region of Wisconsin" width ="1280" height="720">
+				<img src="https://kdcampbell2.github.io/lis351-kellan.github.io/driftlessarea.jpeg" alt="Driftless Region of Wisconsin" width ="1280" height="720">
 				<p> Photo: David Bowman </p>	
 
 			<p> 
