--- a/research.html
+++ b/research.html
@@ -23,7 +23,7 @@
 			<main>
 
 
-				<img src="images\research-labs.png" alt="Department of Neurology" width ="720" height="200">
+				<img src="https://kdcampbell2.github.io/lis351-kellan.github.io/research-labs.png" alt="Department of Neurology" width ="720" height="200">
 				<p> Photo: Jeff Miller </p>	
 
 			<p> 
@@ -38,7 +38,7 @@
 
 			</p>
 
-			<img src="images\gr1.jpg" alt="Average slope of regional cerbral perfusion changes with age" width ="300" height="300" >
+			<img src="https://kdcampbell2.github.io/lis351-kellan.github.io/gr1.jpg" alt="Average slope of regional cerbral perfusion changes with age" width ="300" height="300" >
 
 
 
@@ -56,7 +56,7 @@
 				</p>
 
 
-				<img src="images\rcpc.jpg" alt="White Matter Hyperintensity Probability Maps" width ="300" height="300" >
+				<img src="https://kdcampbell2.github.io/lis351-kellan.github.io/rcpc.jpg" alt="White Matter Hyperintensity Probability Maps" width ="300" height="300" >
 		
 		</article>
 
